"""empty message

Revision ID: 1757848fab05
Revises: 
Create Date: 2024-04-03 19:48:44.445859

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '1757848fab05'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('author',
    sa.Column('author_id', sa.Integer(), nullable=False),
    sa.Column('author_name', sa.String(), nullable=False),
    sa.PrimaryKeyConstraint('author_id')
    )
    op.create_table('document',
    sa.Column('document_id', sa.Integer(), nullable=False),
    sa.Column('document_name', sa.String(), nullable=False),
    sa.Column('document_mime', sa.String(), nullable=False),
    sa.Column('document_uploaded', sa.DateTime(), nullable=False),
    sa.Column('owner_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['owner_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('document_id')
    )
    op.create_table('assessment',
    sa.Column('assessment_id', sa.Integer(), nullable=False),
    sa.Column('assessment_name', sa.String(), nullable=False),
    sa.Column('assessment_created', sa.DateTime(), nullable=False),
    sa.Column('assessment_modified', sa.DateTime(), nullable=True),
    sa.Column('owner_id', sa.Integer(), nullable=False),
    sa.Column('rubric_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['owner_id'], ['user.user_id'], ),
    sa.ForeignKeyConstraint(['rubric_id'], ['document.document_id'], ),
    sa.PrimaryKeyConstraint('assessment_id')
    )
    op.create_table('criterion',
    sa.Column('criterion_id', sa.Integer(), nullable=False),
    sa.Column('criterion_name', sa.String(), nullable=False),
    sa.Column('criterion_min', sa.Integer(), nullable=False),
    sa.Column('criterion_max', sa.Integer(), nullable=False),
    sa.Column('assessment_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['assessment_id'], ['assessment.assessment_id'], ),
    sa.PrimaryKeyConstraint('criterion_id')
    )
    op.create_table('submission',
    sa.Column('submission_id', sa.Integer(), nullable=False),
    sa.Column('submission_submitted', sa.DateTime(), nullable=False),
    sa.Column('submission_modified', sa.DateTime(), nullable=True),
    sa.Column('assessment_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['assessment_id'], ['assessment.assessment_id'], ),
    sa.PrimaryKeyConstraint('submission_id')
    )
    op.create_table('result',
    sa.Column('submission_id', sa.Integer(), nullable=False),
    sa.Column('criterion_id', sa.Integer(), nullable=False),
    sa.Column('result_value', sa.Integer(), nullable=False),
    sa.Column('marker_id', sa.Integer(), nullable=False),
    sa.Column('result_marked', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['criterion_id'], ['criterion.criterion_id'], ),
    sa.ForeignKeyConstraint(['marker_id'], ['user.user_id'], ),
    sa.ForeignKeyConstraint(['submission_id'], ['submission.submission_id'], ),
    sa.PrimaryKeyConstraint('submission_id', 'criterion_id')
    )
    op.create_table('submission_attachment',
    sa.Column('submission_id', sa.Integer(), nullable=False),
    sa.Column('document_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['document_id'], ['document.document_id'], ),
    sa.ForeignKeyConstraint(['submission_id'], ['submission.submission_id'], ),
    sa.PrimaryKeyConstraint('submission_id', 'document_id')
    )
    op.create_table('submission_author',
    sa.Column('submission_id', sa.Integer(), nullable=False),
    sa.Column('author_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['author_id'], ['author.author_id'], ),
    sa.ForeignKeyConstraint(['submission_id'], ['submission.submission_id'], ),
    sa.PrimaryKeyConstraint('submission_id', 'author_id')
    )
    with op.batch_alter_table('user', schema=None) as batch_op:
        batch_op.add_column(sa.Column('user_id', sa.Integer(), nullable=False))
        batch_op.add_column(sa.Column('user_name', sa.String(), nullable=False))
        batch_op.add_column(sa.Column('user_email', sa.String(), nullable=False))
        batch_op.add_column(sa.Column('user_password', sa.String(), nullable=False))
        batch_op.drop_constraint('user_email_key', type_='unique')
        batch_op.drop_constraint('user_username_key', type_='unique')
        batch_op.drop_column('password')
        batch_op.drop_column('id')
        batch_op.drop_column('username')
        batch_op.drop_column('email')

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('user', schema=None) as batch_op:
        batch_op.add_column(sa.Column('email', sa.VARCHAR(length=120), autoincrement=False, nullable=False))
        batch_op.add_column(sa.Column('username', sa.VARCHAR(length=80), autoincrement=False, nullable=False))
        batch_op.add_column(sa.Column('id', sa.INTEGER(), autoincrement=True, nullable=False))
        batch_op.add_column(sa.Column('password', sa.VARCHAR(length=500), autoincrement=False, nullable=False))
        batch_op.create_unique_constraint('user_username_key', ['username'])
        batch_op.create_unique_constraint('user_email_key', ['email'])
        batch_op.drop_column('user_password')
        batch_op.drop_column('user_email')
        batch_op.drop_column('user_name')
        batch_op.drop_column('user_id')

    op.drop_table('submission_author')
    op.drop_table('submission_attachment')
    op.drop_table('result')
    op.drop_table('submission')
    op.drop_table('criterion')
    op.drop_table('assessment')
    op.drop_table('document')
    op.drop_table('author')
    # ### end Alembic commands ###
