@startuml
  ' hide the spot
  hide circle
  ' avoid problems with angled crows feet
  skinparam linetype ortho

  entity USER {
    * user_id : number <<generated>
    ---
    * user_email : text <<unique>>
    * user_name : text
    * user_password : text
  }
  note right of USER::user_password
    Salted and hashed password
  end note


  entity DOCUMENT {
    * document_id : number <<generated>>
    ---
    * document_name : text
    * document_owner : number <<FK>>
    * document_uploaded : datetime
    * document_mime : text
    * document_blob : blob
  }
  DOCUMENT }o..|| USER


  together {
    entity ASSESSMENT {
      * assessment_id : number <<generated>>
      ---
      * assessment_name : text
      assessment_rubric : number <<FK>>
      * assessment_owner : number <<FK>>
      * assessment_created : datetime
      * assessment_modified : datetime
    }
    DOCUMENT |o..o{ ASSESSMENT
    ASSESSMENT }o..|| USER


    entity CRITERION {
      * criterion_id : number <<generated>>
      ---
      * assessment_id : number <<FK>>
      * criterion_name : text
      * criterion_min : number
      * criterion_max : number
    }
    ASSESSMENT ||..o{ CRITERION
  }


  together {
    entity AUTHOR {
      * author_id : number <<generated>>
      ---
      * author_name : string
    }
  
  
    entity SUBMISSION {
      * submission_id number <<generated>>
      ---
      * assessment_id : number <<FK>>
      * submission_time : datetime
    }
    ASSESSMENT ||..o{ SUBMISSION


    entity SUBMISSION_AUTHOR {
      * submission_author_id : number <<generated>>
      ---
      * submission_id : number <<FK>>
      * author_id : number <<FK>>
    }
    SUBMISSION ||..|{ SUBMISSION_AUTHOR
    AUTHOR ||..o{ SUBMISSION_AUTHOR


    entity SUBMISSION_ATTACHMENT {
      * submission_attachment_id : number <<generated>>
      ---
      * submission_id : number <<FK>>
      * document_id : number <<FK>>
    }
    SUBMISSION ||..|{ SUBMISSION_ATTACHMENT
    DOCUMENT ||..o| SUBMISSION_ATTACHMENT


    entity RESULT {
      * result_id : number <<generated>>
      ---
      * submission_id : number <<FK>>
      * criterion_id : number <<FK>>
      * result_value : number
      * result_marker : number <<FK>>
      * result_marked : datetime
    }
    RESULT }o..|| CRITERION
    RESULT }o..|| SUBMISSION
    RESULT }o..|| USER
  }

together {  
    entity EVENT_LOG {
      * event_id : number <<generated>>
      ---
      * user_id : number <<FK>>
      * event_time : datetime
      * event_action : text
      * event_object_type : text
      * event_object_id : number 
    }
    EVENT_LOG }o..|| USER
    note right of EVENT_LOG::event_action
      One of create, update or delete
    end note
    note right of EVENT_LOG::event_object_type
      Type of the entity affected by the event
    end note
    note right of EVENT_LOG::event_object_id
      Primary key of the entity affected by the event
    end note
  }  
@enduml
